--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "scripts": {
-    "precommit": "lint-staged",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
     "prettier-watch": "onchange '**/*.md' -- prettier --write {{changed}}",
     "commit": "git add . && git commit -m 'feat: update tutorial ✨' && git push",
     "clean-commit": "git checkout --orphan latest_branch && git add -A && git commit -am 'clean past commit history 😊' && git branch -D master && git branch -m master && git push -f origin master"
   },
+  "pre-commit": [
+    "precommit-msg",
+    "lint-staged"
+  ],
   "lint-staged": {
     "*.{js,json,css,md}": ["prettier --write", "git add"]
   },
