--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "commit": "git add . && git commit -m 'feat: update tutorial ✨' && git push",
     "clean-commit": "git checkout --orphan latest_branch && git add -A && git commit -am 'clean past commit history 😊' && git branch -D master && git branch -m master && git push -f origin master"
   },
-  "pre-commit": [
-    "precommit-msg",
-    "lint-staged"
-  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run precommit-msg && lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{js,json,css,md}": ["prettier --write", "git add"]
   },
