--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-node_modules/
+.DS_Store
+node_modules
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
