--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "prettier": "prettier --write '**/*.md'",
     "prettier-watch": "onchange '**/*.md' -- prettier --write {{changed}}",
     "commit": "git add . && git commit -m 'feat: update tutorial ✨' && git push",
     "clean-commit": "git checkout --orphan latest_branch && git add -A && git commit -am 'clean past commit history 😊' && git branch -D master && git branch -m master && git push -f origin master"
