--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "proseWrap": false
   },
   "devDependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^5.0.0",
-    "onchange": "^3.2.1",
-    "prettier": "1.8.2"
+    "husky": "^3.0.0",
+    "lint-staged": "9.2.0",
+    "onchange": "^6.0.0",
+    "prettier": "1.18.2"
   }
 }
